--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -23,3 +23,17 @@ jobs:
           context: .
           push: true
           tags: ghcr.io/${{ github.repository }}/gateway:latest,ghcr.io/${{ github.repository }}/gateway:${{ github.sha }}
+
+      # Kubernetes deployment
+      - uses: actions/checkout@master
+      - name: Run commands on the pod
+        uses: danielr1996/kubectl-action@1.0.0
+        with:
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+          args: exec deployment/gm-gateway -- /bin/sh -c 'git pull'
+      - uses: actions/checkout@master
+      - name: Run commands on the pod
+        uses: danielr1996/kubectl-action@1.0.0
+        with:
+          kubeconfig: ${{ secrets.KUBECONFIG }}
+          args: exec deployment/gm-gateway -- /bin/sh -c 'iex --name recompile@${POD_IP} --cookie gm --remsh gateway --rpc-eval gateway "IEx.Helpers.recompile\(\)" -e ":erlang.halt"'
